syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hybrid.vector.contract";
option java_outer_classname = "VectorContractProto";

service VectorSearchService {
  rpc Search (VectorSearchRequest) returns (VectorSearchResponse);
}

message VectorSearchRequest {
  string query = 1;
  int32 top_k = 2;
}

message VectorHit {
  string document_id = 1;
  double similarity_score = 2;
  string title = 3;
}

message VectorSearchResponse {
  repeated VectorHit hits = 1;
}
